# scivianna

./: .gitignore  .readthedocs.yaml  AGENTS.md  agent.md  pyproject.toml  readme.md  setup.py  todo
.github/workflows/: python-app.yml
docs/: build_doc.sh  requirements.txt
docs/source/: conf.py  index.rst  tutorials.rst
docs/source/api/: modules.rst  scivianna.agent.rst  (+17 more)
src/scivianna/: constants.py  enums.py  notebook_tools.py  readme.md  slave.py
src/scivianna_example/: demo.py  demo_description.md  llm_my_plot.py  readme.md
tests/gui_tests/: test_axes_extension.py  test_extension_callbacks.py  test_field_selector.py  test_field_selector_extension.py  test_file_loader_extension.py  test_interface.py  test_keybind_2d.py  test_mouse_europe.py  test_panel_2d.py
tests/integration_test/: test_coupling.py  test_example.py  test_import_gridstack.py  test_import_split.py  test_mouse_europe.py  test_plot_grid.py  test_plot_polygons.py  test_plt_plotters.py  test_save_load_med.py  test_serialization.py  test_structured_mesh.py
tests/unit_test/: test_color_tools.py  test_csv_interface.py  test_data1d.py  test_data_2d.py  test_data_2d_operations.py  test_data_2d_worker.py  test_grid_color.py  test_numpy_to_polygons.py  test_slave_error_caught.py  test_time_dataframe.py
tests/unit_tests/: test_csv_interface.py  test_data1d.py  test_time_dataframe.py
tutorials/: 0_introduction.ipynb  1_simple_2d_panel.ipynb  2_multiview_panels.ipynb  3_panel_2d_1d_interactions.ipynb  4_develop_interface.ipynb  5_develop_extension.ipynb  6_matplotlib_api.ipynb
utils/: up_version.sh
(+92 files in other folders)
